Repair modal image transition code and center brand-image on smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,11 @@ h1 {
 .modal-img {
   width: 45%;
   padding: 20px;
+  transition: all .6s ease-in-out;
+}
+
+.modal-img:hover {
+  transform: scale(1.07);
 }
 
 .modal-footer {
@@ -109,7 +114,11 @@ h1 {
     margin-top: 200px;
   }
 
+  .navbar-brand {
+    margin: auto;
+  }
 }
+
 
 
 
